--- a/ClientMessenger/ClientMessenger.csproj
+++ b/ClientMessenger/ClientMessenger.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="SimpleInjector" Version="5.3.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ChatModelLibrary\ChatModelLibrary.csproj" />
+    </ItemGroup>
+
 </Project>
